# TartsMonitor

./: README.md  TartsMonitor.py  TartsMonitor_mqtt.py  pyproject.toml
__pypackages__/3.10/lib/paho_mqtt-1.6.1.dist-info/: RECORD
__pypackages__/3.8/lib/paho_mqtt-1.5.1.dist-info/: RECORD  SHARED
